# pygbm

./: .pylintrc  gen.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
gbm/: __init__.py  gbm.py
gbm/capi/: gbm.py
